feat: implement api client typing, fix openapi notation, and require chainSpecific values
